Add user funding history endpoint
